Fix broken styles in smaller screens

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -51,14 +51,15 @@ body {
   background-color: #0b0c1e;
   padding: 2rem 3.4rem;
   display: flex;
+  gap: 3.6rem;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #e91e6347;
 
   .logo {
-    font-size: 3.6rem;
-    font-weight: 600;
+    font-size: 2.6rem;
+    font-weight: 700;
     text-decoration: none;
     font-style: italic;
 
@@ -69,6 +70,7 @@ body {
 
   .right {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 3.6rem;
 
@@ -96,7 +98,8 @@ body {
       align-items: center;
       justify-content: center;
 
-      width: 3.3em;
+      width: 4.4rem;
+      height: 4.4rem;
       border-radius: 50%;
       border: 2px solid transparent;
       padding: 0.8rem;
@@ -223,72 +226,77 @@ body {
   justify-content: center;
   align-items: center;
 
-  .product {
-    background-color: #000c12;
+  li {
+    overflow: hidden;
 
-    padding: 2.4rem;
+    .product {
+      background-color: #000c12;
 
-    width: 30rem;
+      padding: 2.4rem;
 
-    display: flex;
-    flex-direction: column;
-    gap: 3.2rem;
+      width: 30rem;
+      max-width: 100%;
 
-    border: 1px solid #e91e634f;
-    border-radius: 0.4rem;
-
-    box-shadow: 0 0 1.2rem 0px rgb(233 30 99 / 24%);
-    transition: all 0.3s;
-
-    .img-wrap {
-      width: 16rem;
       display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      align-self: center;
+      flex-direction: column;
+      gap: 3.2rem;
 
-      img {
-        width: 100%;
-      }
-    }
+      border: 1px solid #e91e634f;
+      border-radius: 0.4rem;
 
-    .name-cost {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      font-weight: 500;
-      color: #999;
-
-      .name {
-        font-size: 2rem;
-        color: #e0e0e0;
-      }
-
-      .cost {
-        font-size: 1.6rem;
-      }
-    }
-
-    .add-to-cart {
-      background-color: transparent;
-      color: #eee;
-      padding: 0.6rem 1.8rem;
-      font-size: 1.8rem;
-      font-weight: 500;
-      border-radius: 2.4rem;
-      border: 1px solid #00bcd4;
+      box-shadow: 0 0 1.2rem 0px rgb(233 30 99 / 24%);
       transition: all 0.3s;
 
-      &:hover {
-        background-color: transparentize($color: #00bcd4, $amount: 0.9);
-        color: #00bcd4;
-      }
-    }
+      .img-wrap {
+        width: 16rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        align-self: center;
 
-    .quantity-controls {
-      @extend %product-quantity-control;
+        img {
+          width: 100%;
+        }
+      }
+
+      .name-cost {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        font-weight: 500;
+        color: #999;
+
+        .name {
+          font-size: 2rem;
+          color: #e0e0e0;
+        }
+
+        .cost {
+          font-size: 1.6rem;
+        }
+      }
+
+      .add-to-cart {
+        background-color: transparent;
+        color: #eee;
+        padding: 0.6rem 1.8rem;
+        font-size: 1.8rem;
+        font-weight: 500;
+        border-radius: 2.4rem;
+        border: 1px solid #00bcd4;
+        transition: all 0.3s;
+
+        &:hover {
+          background-color: transparentize($color: #00bcd4, $amount: 0.9);
+          color: #00bcd4;
+        }
+      }
+
+      .quantity-controls {
+        @extend %product-quantity-control;
+      }
     }
   }
 }
